# openclaw-clawforge

./: .gitignore  LICENSE  README.md  README_CN.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
clawforge/: __init__.py  cli.py  dev_cmd.py  init_cmd.py  publish_cmd.py  sandbox.py  test_cmd.py  watcher.py
clawforge/templates/channel/: README.md.j2  openclaw.plugin.json.j2  plugin.py.j2  test_plugin.py.j2
clawforge/templates/common/: openclaw.plugin.json.j2
clawforge/templates/memory/: README.md.j2  openclaw.plugin.json.j2  plugin.py.j2  test_plugin.py.j2
clawforge/templates/provider/: README.md.j2  openclaw.plugin.json.j2  plugin.py.j2  test_plugin.py.j2
clawforge/templates/tool/: README.md.j2  openclaw.plugin.json.j2  plugin.py.j2  test_plugin.py.j2
tests/: conftest.py  test_init_cmd.py  test_publish_cmd.py  test_sandbox.py  test_test_cmd.py  test_watcher.py
